Implemented Activation email, fixed Security
Implemented Activation Emails
Fixed Security issues
Started fixing Passenger Controller so that automated tests pass

--- a/mango/src/main/resources/application.properties
+++ b/mango/src/main/resources/application.properties
@@ -24,3 +24,10 @@ server.servlet.context-path=/api
 spring.security.user.name=test
 spring.security.user.password=test
 jwt.secret = "tajna"
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=serbia.mango@gmail.com
+spring.mail.password=ikdggusdbnktotjq
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
